src/app/shared/components/slider/slider.component.scss
@import "colors";
@import "mixins";
@import "vars";

:host {
  display: block;
}

.slider-container {
  width: 100%;
  position: relative;

  @include respond-to($medium) {
    padding-left: 70px;
    padding-right: 70px;
  }

  @include respond-to($large) {
    padding-left: 70px;
    padding-right: 70px;
  }
}

.slider {
  width: 100%;
  overflow: hidden;
}

.slider__list {
  display: flex;
  width: 12000px;
  align-items: center;
  margin: 0 auto;

  &:not(._no-transition) {
    transition: transform 300ms ease-in-out;
  }
}

.slider__item {
  flex-shrink: 0;
  width: var(--item-width);
  min-height: 320px;
  transition: transform $transition-data;

  @include respond-to($medium) {
    padding-left: 24px;
    padding-right: 24px;
  }

  @include respond-to($large) {
    padding-left: 24px;
    padding-right: 24px;
  }
}

.slider__img {
  width: 100%;
  object-fit: cover;
}

.slider__actions {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
}

.slider__btn {
  width: 64px;
  height: 64px;
  border: none;
  color: $color-white;
  background-color: $color-black-100-50;
  transition: color $transition-data, background-color $transition-data;
  cursor: pointer;
  outline: none;

  @media (hover: hover) and (pointer: fine) {
    &:hover {
      color: $color-white-100-50;
      background-color: $color-black-100-30;
    }

    &:active {
      color: $color-white-100-20;
      background-color: $color-black-100-20;
    }
  }

  &._icon-only {
    padding: 16px;
  }

  &._rounded {
    border-radius: 50%;
  }
}

.slider__bullets {
  display: flex;
  justify-content: center;
  align-items: center;
  position: absolute;
  bottom: -48px;
  left: 50%;
  transform: translate3d(-50%, 0, 0);
}

.slider__bullet {
  width: 6px;
  height: 6px;
  border-radius: 50%;
  background-color: $color-gray-8;
  transition: background-color $transition-data;
  cursor: pointer;

  &:not(:first-child) {
    margin-left: 16px;
  }

  &._active {
    background-color: $color-1;
  }
}

